--- a/python-numpy/advanced/peanut-butter.ipynb
+++ b/python-numpy/advanced/peanut-butter.ipynb
@@ -1,1 +1,125 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"peanut-butter.ipynb","provenance":[],"collapsed_sections":[]},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"markdown","source":["[![PracticeProbs](https://d33wubrfki0l68.cloudfront.net/b6800cc830e3fd5a3a4c3d9cfb1137e6a4c15c77/ec467/assets/images/transparent-1.png)](https://www.practiceprobs.com/)"],"metadata":{"id":"t1VEtnSjbu-d"}},{"cell_type":"markdown","source":["# [Peanut Butter](https://www.practiceprobs.com/problemsets/python-numpy/advanced/peanut-butter/)\n","\n","Given `peanut`, a 4x5 array of 0s, and `butter`, a 5-element 1-d array of indices, fill the rows of `peanut` with 1s starting from the column indices given by `butter`."],"metadata":{"id":"M6yShpelZy-I"}},{"cell_type":"code","source":["import numpy as np\n","\n","peanut = np.zeros(shape = (4, 5))\n","butter = np.array([3, 0, 4, 1])\n","\n","print(peanut)\n","# [[0. 0. 0. 0. 0.]\n","#  [0. 0. 0. 0. 0.]\n","#  [0. 0. 0. 0. 0.]\n","#  [0. 0. 0. 0. 0.]]\n","\n","print(butter)\n","# [3 0 4 1]"],"metadata":{"id":"ZlHN2R3QaPX3"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["---"],"metadata":{"id":"h7D8d-J5cela"}},{"cell_type":"code","source":["# Your brilliant solution here!"],"metadata":{"id":"CWwTWfYCa4k0"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["## [See our solution!](https://www.practiceprobs.com/problemsets/python-numpy/advanced/peanut-butter/solution/)"],"metadata":{"id":"bF3kvEc4a4It"}}]}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "t1VEtnSjbu-d"
+   },
+   "source": [
+    "[![PracticeProbs](https://d33wubrfki0l68.cloudfront.net/b6800cc830e3fd5a3a4c3d9cfb1137e6a4c15c77/ec467/assets/images/transparent-1.png)](https://www.practiceprobs.com/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "M6yShpelZy-I"
+   },
+   "source": [
+    "# [Peanut Butter](https://www.practiceprobs.com/problemsets/python-numpy/advanced/peanut-butter/)\n",
+    "\n",
+    "Given `peanut`, a 4x5 array of 0s, and `butter`, a 5-element 1-d array of indices, fill the rows of `peanut` with 1s starting from the column indices given by `butter`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "id": "ZlHN2R3QaPX3"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]]\n",
+      "[3 0 4 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "peanut = np.zeros(shape = (4, 5))\n",
+    "butter = np.array([3, 0, 4, 1])\n",
+    "\n",
+    "print(peanut)\n",
+    "# [[0. 0. 0. 0. 0.]\n",
+    "#  [0. 0. 0. 0. 0.]\n",
+    "#  [0. 0. 0. 0. 0.]\n",
+    "#  [0. 0. 0. 0. 0.]]\n",
+    "\n",
+    "print(butter)\n",
+    "# [3 0 4 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "h7D8d-J5cela"
+   },
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 1. 1.]\n",
+      " [1. 1. 1. 1. 1.]\n",
+      " [0. 0. 0. 0. 1.]\n",
+      " [0. 1. 1. 1. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, butter_col_start_idx in enumerate(butter):\n",
+    "    peanut[i, butter_col_start_idx:] = 1\n",
+    "print(peanut)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "bF3kvEc4a4It"
+   },
+   "source": [
+    "## [See our solution!](https://www.practiceprobs.com/problemsets/python-numpy/advanced/peanut-butter/solution/)"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "peanut-butter.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "linusbio",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
