--- a/python-numpy/expert/outer-product.ipynb
+++ b/python-numpy/expert/outer-product.ipynb
@@ -1,1 +1,177 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"outer-product.ipynb","provenance":[],"collapsed_sections":[]},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"markdown","source":["[![PracticeProbs](https://d33wubrfki0l68.cloudfront.net/b6800cc830e3fd5a3a4c3d9cfb1137e6a4c15c77/ec467/assets/images/transparent-1.png)](https://www.practiceprobs.com/)"],"metadata":{"id":"t1VEtnSjbu-d"}},{"cell_type":"markdown","source":["# [Outer Product](https://www.practiceprobs.com/problemsets/python-numpy/expert/outer-product/)\n","\n","Calculate the element-wise [outer product](https://en.wikipedia.org/wiki/Outer_product) of two matrices, `A` & `B`."],"metadata":{"id":"M6yShpelZy-I"}},{"cell_type":"code","source":["import numpy as np\n","\n","A = np.arange(10*3).reshape((10,3))\n","B = np.arange(10*5).reshape((10,5))\n","\n","print(A)\n","# [[ 0  1  2]\n","#  [ 3  4  5]\n","#  [ 6  7  8]\n","#  [ 9 10 11]\n","#  [12 13 14]\n","#  [15 16 17]\n","#  [18 19 20]\n","#  [21 22 23]\n","#  [24 25 26]\n","#  [27 28 29]]\n","\n","print(B)\n","# [[ 0  1  2  3  4]\n","#  [ 5  6  7  8  9]\n","#  [10 11 12 13 14]\n","#  [15 16 17 18 19]\n","#  [20 21 22 23 24]\n","#  [25 26 27 28 29]\n","#  [30 31 32 33 34]\n","#  [35 36 37 38 39]\n","#  [40 41 42 43 44]\n","#  [45 46 47 48 49]]"],"metadata":{"id":"ZlHN2R3QaPX3"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["The result should be a 10x3x5 array where the ith 3x5 array is the outer product of Ai and Bi."],"metadata":{"id":"vOLTbQVgoBdb"}},{"cell_type":"markdown","source":["---"],"metadata":{"id":"h7D8d-J5cela"}},{"cell_type":"code","source":["# Your brilliant solution here!"],"metadata":{"id":"CWwTWfYCa4k0"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["## [See our solution!](https://www.practiceprobs.com/problemsets/python-numpy/expert/outer-product/solution/)"],"metadata":{"id":"bF3kvEc4a4It"}}]}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "t1VEtnSjbu-d"
+   },
+   "source": [
+    "[![PracticeProbs](https://d33wubrfki0l68.cloudfront.net/b6800cc830e3fd5a3a4c3d9cfb1137e6a4c15c77/ec467/assets/images/transparent-1.png)](https://www.practiceprobs.com/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "M6yShpelZy-I"
+   },
+   "source": [
+    "# [Outer Product](https://www.practiceprobs.com/problemsets/python-numpy/expert/outer-product/)\n",
+    "\n",
+    "Calculate the element-wise [outer product](https://en.wikipedia.org/wiki/Outer_product) of two matrices, `A` & `B`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "id": "ZlHN2R3QaPX3"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2]\n",
+      " [ 3  4  5]\n",
+      " [ 6  7  8]\n",
+      " [ 9 10 11]\n",
+      " [12 13 14]\n",
+      " [15 16 17]\n",
+      " [18 19 20]\n",
+      " [21 22 23]\n",
+      " [24 25 26]\n",
+      " [27 28 29]]\n",
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]\n",
+      " [20 21 22 23 24]\n",
+      " [25 26 27 28 29]\n",
+      " [30 31 32 33 34]\n",
+      " [35 36 37 38 39]\n",
+      " [40 41 42 43 44]\n",
+      " [45 46 47 48 49]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "A = np.arange(10*3).reshape((10,3))\n",
+    "B = np.arange(10*5).reshape((10,5))\n",
+    "\n",
+    "print(A)\n",
+    "# [[ 0  1  2]\n",
+    "#  [ 3  4  5]\n",
+    "#  [ 6  7  8]\n",
+    "#  [ 9 10 11]\n",
+    "#  [12 13 14]\n",
+    "#  [15 16 17]\n",
+    "#  [18 19 20]\n",
+    "#  [21 22 23]\n",
+    "#  [24 25 26]\n",
+    "#  [27 28 29]]\n",
+    "\n",
+    "print(B)\n",
+    "# [[ 0  1  2  3  4]\n",
+    "#  [ 5  6  7  8  9]\n",
+    "#  [10 11 12 13 14]\n",
+    "#  [15 16 17 18 19]\n",
+    "#  [20 21 22 23 24]\n",
+    "#  [25 26 27 28 29]\n",
+    "#  [30 31 32 33 34]\n",
+    "#  [35 36 37 38 39]\n",
+    "#  [40 41 42 43 44]\n",
+    "#  [45 46 47 48 49]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "vOLTbQVgoBdb"
+   },
+   "source": [
+    "The result should be a 10x3x5 array where the ith 3x5 array is the outer product of Ai and Bi."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "h7D8d-J5cela"
+   },
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "id": "CWwTWfYCa4k0"
+   },
+   "outputs": [],
+   "source": [
+    "op = np.einsum('ij,ik->ijk', A, B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# cross check single ith outer product\n",
+    "op_0 = np.outer(A[0],B[0])\n",
+    "op[0] == op_0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "bF3kvEc4a4It"
+   },
+   "source": [
+    "## [See our solution!](https://www.practiceprobs.com/problemsets/python-numpy/expert/outer-product/solution/)"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "outer-product.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "linusbio",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.10"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
